--- a/QR_scan/pubspec.yaml
+++ b/QR_scan/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   qr_code_scanner: ^1.0.0
+  url_launcher: ^6.1.7 # Add this version or a compatible one
+
 
 
 
