--- a/project_user_profile/android/app/build.gradle
+++ b/project_user_profile/android/app/build.gradle
@@ -24,9 +24,11 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace = "com.example.project_user_profile"
-    compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    compileSdkVersion 34
+    buildToolsVersion "34.0.0"
+
+}
+
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
@@ -51,7 +53,7 @@ android {
             signingConfig = signingConfigs.debug
         }
     }
-}
+
 
 flutter {
     source = "../.."
